compilateurDeca/src/test/deca/syntax/invalid/objet/asm_semi.deca
// Description:
//   Méthode asm sans point-virgule final.
// Resultats:
//    Echec (erreur de syntaxe)
//
// Historique:
//    cree le 15/01/2026

class A {
    int f() asm("RTS")
}
{
}
